--- a/package.json
+++ b/package.json
@@ -1,49 +1,62 @@
 {
-  "name": "alertaware-2.0",
-  "version": "2.0.0",
-  "description": "That's my project to finish my college. It's a notification system with context-awareness to identify what's is the best moment and way to send a notification!",
-  "main": "index.js",
-  "scripts": {
-    "test": "",
-    "babel-debug": "babel-node app.js --debug",
-    "dev": "nodemon index.js",
-    "start": "npm run dev"
-  },
-  "keywords": [
-    "context-awareness",
-    "notification",
-    "system",
-    "alertaware"
-  ],
-  "author": "adrianlemess",
-  "license": "ISC",
-  "devDependencies": {
-    "apidoc": "^0.17.4",
-    "apidoc-markdown": "^0.2.0",
-    "babel-cli": "^6.22.2",
-    "babel-preset-latest": "^6.22.0",
-    "cross-env": "^3.1.4",
-    "dotenv-safe": "^4.0.3",
-    "nodemon": "^1.11.0"
-  },
-  "dependencies": {
-    "bluebird": "^3.4.7",
-    "body-parser": "^1.16.0",
-    "compression": "^1.6.2",
-    "consign": "^0.1.2",
-    "cors": "^2.8.1",
-    "express": "^4.14.0",
-    "glob": "^7.1.1",
-    "helmet": "^3.4.0",
-    "http": "0.0.0",
-    "lodash": "^4.17.4",
-    "method-override": "^2.3.7",
-    "mm-node-logger": "0.0.1",
-    "mongoose": "^4.7.8",
-    "morgan": "^1.7.0",
-    "multer": "^1.2.1",
-    "passport": "^0.3.2",
-    "path": "^0.12.7",
-    "redis": "^2.6.5"
-  }
+    "name": "alertaware-2.0",
+    "version": "2.0.0",
+    "description": "That's my project to finish my college. It's a notification system with context-awareness to identify what's is the best moment and way to send a notification!",
+    "main": "index.js",
+    "scripts": {
+        "babel-debug": "babel-node app.js --debug",
+        "dev": "nodemon index.js",
+        "start": "npm run check && npm run dev",
+        "test": "jest",
+        "check": "eslint *.js",
+        "start test:unit": "jest \"test/unit-testing/!*.test.js\""
+    },
+    "keywords": [
+        "context-awareness",
+        "notification",
+        "system",
+        "alertaware"
+    ],
+    "author": "adrianlemess",
+    "license": "ISC",
+    "devDependencies": {
+        "apidoc": "^0.17.4",
+        "apidoc-markdown": "^0.2.0",
+        "babel-cli": "^6.22.2",
+        "babel-eslint": "^7.1.1",
+        "babel-preset-latest": "^6.22.0",
+        "cross-env": "^3.1.4",
+        "dotenv-safe": "^4.0.3",
+        "eslint-config-standard": "^6.2.1",
+        "eslint-plugin-promise": "^3.4.0",
+        "eslint-plugin-standard": "^2.0.1",
+        "nodemon": "^1.11.0"
+    },
+    "jest": {
+        "testEnvironment": "node",
+        "setupTestFrameworkScriptFile": "<rootDir>/test/setup.js"
+    },
+    "dependencies": {
+        "bluebird": "^3.4.7",
+        "body-parser": "^1.16.0",
+        "compression": "^1.6.2",
+        "consign": "^0.1.2",
+        "cors": "^2.8.1",
+        "express": "^4.14.0",
+        "glob": "^7.1.1",
+        "helmet": "^3.4.0",
+        "http": "0.0.0",
+        "jest-cli": "^18.1.0",
+        "lodash": "^4.17.4",
+        "method-override": "^2.3.7",
+        "mm-node-logger": "0.0.1",
+        "mockgoose": "^6.0.8",
+        "mongoose": "^4.7.8",
+        "morgan": "^1.7.0",
+        "multer": "^1.2.1",
+        "passport": "^0.3.2",
+        "path": "^0.12.7",
+        "redis": "^2.6.5",
+        "supertest": "^2.0.1"
+    }
 }
