--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "babel-preset-latest": "^6.22.0",
     "cross-env": "^3.1.4",
     "dotenv-safe": "^4.0.3",
+    "eslint": "^3.14.1",
     "eslint-config-standard": "^6.2.1",
     "eslint-plugin-promise": "^3.4.0",
     "eslint-plugin-standard": "^2.0.1",
@@ -37,6 +38,7 @@
     "setupTestFrameworkScriptFile": "<rootDir>/test/setup.js"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.0",
     "bluebird": "^3.4.7",
     "body-parser": "^1.16.0",
     "compression": "^1.6.2",
@@ -48,6 +50,7 @@
     "http": "0.0.0",
     "jasmine": "^2.5.3",
     "jest-cli": "^18.1.0",
+    "jsonwebtoken": "^7.2.1",
     "lodash": "^4.17.4",
     "method-override": "^2.3.7",
     "mm-node-logger": "0.0.1",
@@ -56,6 +59,7 @@
     "morgan": "^1.7.0",
     "multer": "^1.2.1",
     "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "redis": "^2.6.5",
     "sinon": "^1.17.7",
