--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "path": "^0.12.7",
     "redis": "^2.6.5",
     "sinon": "^1.17.7",
-    "supertest": "^2.0.1"
+    "supertest": "^2.0.1",
+    "supertest-as-promised": "^4.0.2"
   }
 }
