--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "scripts": {
         "babel-debug": "babel-node app.js --debug",
         "dev": "cross-env NODE_ENV=development nodemon start.js",
-        "start": "npm run check && npm run dev",
-        "test": "jest",
+        "start": "npm run dev",
         "check": "eslint *.js",
         "test-integration": "cross-env NODE_ENV=test mocha test --recursive --compilers js:babel-core/register --reporter spec --opts test/integration/mocha.opts"
     },
@@ -66,7 +65,6 @@
         "passport": "^0.3.2",
         "passport-local": "^1.0.0",
         "path": "^0.12.7",
-        "redis": "^2.6.5",
-        "sequelize": "^3.30.2",
+        "redis": "^2.6.5"
     }
 }
