--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,14 @@
 .DS_Store
-API/node_modules
-API/public
-API/.tmp
-API/.idea
-API/.log
-API/dist
-API/docs
-API/.env
-API/npm-debug.log
-API/npm
-API/.nyc_output
-API/coverage
-API/cassettes
-
-Client/node_modules/
-Client/platforms/
-Client/plugins/
-Client/www/lib/
-Client/resources/android/*
-Client/resources/ios/*
-
+node_modules
+public
+.tmp
+.idea
+.log
+dist
+docs
+.env
+npm-debug.log
+npm
+.nyc_output
+coverage
+cassettes
