--- a/package.json
+++ b/package.json
@@ -1,71 +1,73 @@
 {
-    "name": "alertaware-2.0",
-    "version": "2.0.0",
-    "description": "That's my project to finish my college. It's a notification system with context-awareness to identify what's is the best moment and way to send a notification!",
-    "main": "index.js",
-    "scripts": {
-        "babel-debug": "babel-node app.js --debug",
-        "dev": "cross-env NODE_ENV=development nodemon start.js",
-        "start": "npm run prod",
-        "prod": "cross-env NODE_ENV=production nodemon start.js",
-        "check": "eslint *.js",
-        "test-integration": "cross-env NODE_ENV=test mocha test --recursive --compilers js:babel-core/register --reporter spec --opts test/integration/mocha.opts"
-    },
-    "keywords": [
-        "context-awareness",
-        "notification",
-        "system",
-        "alertaware"
-    ],
-    "author": "adrianlemess",
-    "license": "ISC",
-    "devDependencies": {
-        "apidoc": "^0.17.4",
-        "apidoc-markdown": "^0.2.0",
-        "babel": "^6.5.2",
-        "babel-cli": "^6.22.2",
-        "babel-core": "^6.22.1",
-        "babel-polyfill": "^6.22.0",
-        "babel-preset-env": "^1.1.8",
-        "babel-preset-latest": "^6.22.0",
-        "babel-register": "^6.23.0",
-        "chai": "^3.5.0",
-        "cross-env": "^3.1.4",
-        "dotenv-safe": "^4.0.3",
-        "eslint": "^3.3.0",
-        "eslint-config-airbnb": "^10.0.1",
-        "eslint-plugin-import": "^1.13.0",
-        "eslint-plugin-jsx-a11y": "^2.1.0",
-        "eslint-plugin-react": "^6.1.0",
-        "eslint-plugin-standard": "^2.0.0",
-        "joi": "^9.0.4",
-        "joi-assert": "0.0.3",
-        "nodemon": "^1.10.2",
-        "supertest": "^3.0.0",
-        "testdouble": "^1.6.0"
-    },
-    "dependencies": {
-        "bcryptjs": "^2.4.0",
-        "bluebird": "^3.4.7",
-        "body-parser": "^1.16.0",
-        "compression": "^1.6.2",
-        "consign": "^0.1.2",
-        "cors": "^2.8.1",
-        "express": "^4.14.0",
-        "express-session": "^1.15.1",
-        "glob": "^7.1.1",
-        "helmet": "^3.4.0",
-        "http": "0.0.0",
-        "jsonwebtoken": "^7.2.1",
-        "lodash": "^4.17.4",
-        "method-override": "^2.3.7",
-        "mm-node-logger": "0.0.1",
-        "mongoose": "^4.8.6",
-        "morgan": "^1.7.0",
-        "multer": "^1.2.1",
-        "passport": "^0.3.2",
-        "passport-local": "^1.0.0",
-        "path": "^0.12.7",
-        "redis": "^2.6.5"
-    }
+  "name": "alertaware-2.0",
+  "version": "2.0.0",
+  "description": "That's my project to finish my college. It's a notification system with context-awareness to identify what's is the best moment and way to send a notification!",
+  "main": "index.js",
+  "scripts": {
+    "babel-debug": "babel-node app.js --debug",
+    "dev": "cross-env NODE_ENV=development nodemon start.js",
+    "start": "npm run prod",
+    "prod": "cross-env NODE_ENV=production nodemon start.js",
+    "check": "eslint *.js",
+    "test-integration": "cross-env NODE_ENV=test mocha test --recursive --compilers js:babel-core/register --reporter spec --opts test/integration/mocha.opts"
+  },
+  "keywords": [
+    "context-awareness",
+    "notification",
+    "system",
+    "alertaware"
+  ],
+  "author": "adrianlemess",
+  "license": "ISC",
+  "devDependencies": {
+    "apidoc": "^0.17.4",
+    "apidoc-markdown": "^0.2.0",
+    "babel": "^6.5.2",
+    "babel-cli": "^6.22.2",
+    "babel-core": "^6.22.1",
+    "babel-polyfill": "^6.22.0",
+    "babel-preset-env": "^1.1.8",
+    "babel-preset-latest": "^6.22.0",
+    "babel-register": "^6.23.0",
+    "chai": "^3.5.0",
+    "cross-env": "^3.1.4",
+    "dotenv-safe": "^4.0.3",
+    "eslint": "^3.3.0",
+    "eslint-config-airbnb": "^10.0.1",
+    "eslint-plugin-import": "^1.13.0",
+    "eslint-plugin-jsx-a11y": "^2.1.0",
+    "eslint-plugin-react": "^6.1.0",
+    "eslint-plugin-standard": "^2.0.0",
+    "joi": "^9.0.4",
+    "joi-assert": "0.0.3",
+    "nodemon": "^1.10.2",
+    "supertest": "^3.0.0",
+    "testdouble": "^1.6.0"
+  },
+  "dependencies": {
+    "bcryptjs": "^2.4.0",
+    "bluebird": "^3.4.7",
+    "body-parser": "^1.16.0",
+    "compression": "^1.6.2",
+    "consign": "^0.1.2",
+    "cors": "^2.8.1",
+    "express": "^4.14.0",
+    "express-session": "^1.15.1",
+    "glob": "^7.1.1",
+    "helmet": "^3.4.0",
+    "http": "0.0.0",
+    "jsonwebtoken": "^7.2.1",
+    "lodash": "^4.17.4",
+    "method-override": "^2.3.7",
+    "mm-node-logger": "0.0.1",
+    "mongoose": "^4.8.6",
+    "morgan": "^1.7.0",
+    "multer": "^1.2.1",
+    "nodemailer": "^4.0.0",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
+    "path": "^0.12.7",
+    "querystring": "^0.2.0",
+    "redis": "^2.6.5"
+  }
 }
